--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Create Design Template</title>
+      <title>학교 급식 관리 시스템</title>
     </head>
 
     <body>
